<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obj_extractor</name>
  <version>0.0.1</version>
  <description>Package that uses a pre-built torch vision model to extract object bounding boxes</description>
  <maintainer email="tsv@tsv.ca">tsv</maintainer>
  <license>GPLv3</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cas726_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
